--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-native": "0.75.2",
     "react-native-sse": "^1.2.1",
     "react-native-tts": "^4.1.1",
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-vosk": "https://github.com/riderodd/react-native-vosk/archive/09d8fccb3c8502790a45a6557e8901313f64b257.tar.gz",
     "web-streams-polyfill": "^4.0.0"
   },
   "devDependencies": {
@@ -28,15 +30,17 @@
     "@react-native/metro-config": "0.75.2",
     "@react-native/typescript-config": "0.75.2",
     "@types/react": "^18.2.6",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "patch-package": "^8.0.0",
     "prettier": "2.8.8",
+    "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4",
-    "web-streams-polyfill": "^4.0.0",
-    "patch-package": "^8.0.0"
+    "web-streams-polyfill": "^4.0.0"
   },
   "engines": {
     "node": ">=18"
